[gd_scene load_steps=11 format=3 uid="uid://bopda6mln1jnd"]

[ext_resource type="Script" path="res://scenes/tag_exporter.gd" id="1_w6iyo"]
[ext_resource type="Texture2D" uid="uid://vypb46ut3fil" path="res://icons/x_icon.svg" id="2_rgm76"]
[ext_resource type="Texture2D" uid="uid://d83q0hy74uit" path="res://icons/search_icon.svg" id="3_0ioq5"]
[ext_resource type="Texture2D" uid="uid://npwxg0xrpf8j" path="res://icons/pointer_left.svg" id="4_mshsq"]
[ext_resource type="Texture2D" uid="uid://cdtejl0p8c4cr" path="res://icons/pointer_right.svg" id="5_iie36"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0g8el"]
bg_color = Color(0, 0, 0, 0.392157)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dojr1"]
bg_color = Color(0.22, 0.22, 0.22, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v4kdy"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_apoyc"]
bg_color = Color(0.14, 0.14, 0.14, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jm62d"]

[node name="TagExporter" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0g8el")
script = ExtResource("1_w6iyo")

[node name="MainCenter" type="CenterContainer" parent="."]
layout_mode = 2

[node name="AllTags" type="PanelContainer" parent="MainCenter"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_dojr1")

[node name="MarginContainer" type="MarginContainer" parent="MainCenter/AllTags"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="MainContainer" type="VBoxContainer" parent="MainCenter/AllTags/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="TitlePanel" type="PanelContainer" parent="MainCenter/AllTags/MarginContainer/MainContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_v4kdy")

[node name="Label" type="Label" parent="MainCenter/AllTags/MarginContainer/MainContainer/TitlePanel"]
layout_mode = 2
size_flags_vertical = 1
text = "Export Tags"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CloseButton" type="Button" parent="MainCenter/AllTags/MarginContainer/MainContainer/TitlePanel"]
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
icon = ExtResource("2_rgm76")
flat = true
icon_alignment = 1
expand_icon = true

[node name="TagsTree" type="Tree" parent="MainCenter/AllTags/MarginContainer/MainContainer"]
custom_minimum_size = Vector2(370, 315)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_apoyc")
hide_folding = true
hide_root = true

[node name="SearchMargin" type="MarginContainer" parent="MainCenter/AllTags/MarginContainer/MainContainer"]
layout_mode = 2
theme_override_constants/margin_top = 4
theme_override_constants/margin_bottom = 4

[node name="SerchTagLnEdt" type="LineEdit" parent="MainCenter/AllTags/MarginContainer/MainContainer/SearchMargin"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
placeholder_text = "Search Tags"
clear_button_enabled = true
right_icon = ExtResource("3_0ioq5")

[node name="MarginContainer" type="MarginContainer" parent="MainCenter/AllTags/MarginContainer/MainContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="BottomPanel" type="PanelContainer" parent="MainCenter/AllTags/MarginContainer/MainContainer/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_jm62d")

[node name="HBoxContainer" type="HBoxContainer" parent="MainCenter/AllTags/MarginContainer/MainContainer/MarginContainer/BottomPanel"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="LeftButton" type="Button" parent="MainCenter/AllTags/MarginContainer/MainContainer/MarginContainer/BottomPanel/HBoxContainer"]
custom_minimum_size = Vector2(34, 24)
layout_mode = 2
size_flags_vertical = 4
tooltip_text = "Previous Page"
focus_mode = 0
disabled = true
icon = ExtResource("4_mshsq")
flat = true
icon_alignment = 1
expand_icon = true

[node name="PageContainer" type="HBoxContainer" parent="MainCenter/AllTags/MarginContainer/MainContainer/MarginContainer/BottomPanel/HBoxContainer"]
layout_mode = 2

[node name="CurrentLbl" type="Label" parent="MainCenter/AllTags/MarginContainer/MainContainer/MarginContainer/BottomPanel/HBoxContainer/PageContainer"]
layout_mode = 2
text = "1"

[node name="PagesLbl" type="Label" parent="MainCenter/AllTags/MarginContainer/MainContainer/MarginContainer/BottomPanel/HBoxContainer/PageContainer"]
layout_mode = 2
text = "/ 1"

[node name="NextButton" type="Button" parent="MainCenter/AllTags/MarginContainer/MainContainer/MarginContainer/BottomPanel/HBoxContainer"]
custom_minimum_size = Vector2(34, 24)
layout_mode = 2
size_flags_vertical = 4
tooltip_text = "Next Page"
focus_mode = 0
disabled = true
icon = ExtResource("5_iie36")
flat = true
icon_alignment = 1
expand_icon = true

[node name="ExportButton" type="Button" parent="MainCenter/AllTags/MarginContainer/MainContainer/MarginContainer/BottomPanel"]
custom_minimum_size = Vector2(90, 32)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
text = "Export"

[node name="CancelButton" type="Button" parent="MainCenter/AllTags/MarginContainer/MainContainer/MarginContainer/BottomPanel"]
custom_minimum_size = Vector2(90, 32)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
text = "Cancel"

[node name="SearchCooldown" type="Timer" parent="MainCenter/AllTags"]
wait_time = 1.25
one_shot = true
